# lifx_ctl

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  build_wasm.sh  discover.py
lifx_wasm/: Cargo.toml  build_wasm.sh  main.js
lifx_wasm/src/: lib.rs
src/: lib.rs  main.rs  plans.rs  srv.rs
src/wasm/: lib.rs
templates/: base.html  manual.html  status.html  wasm.html
tests/: integration_test.rs
