[package]
name = "lifx_wasm"
version = "0.1.0"
authors = ["William Brown <william@blackhats.net.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2"
yew = "0.17"
# http = "0.2"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
anyhow = "1"

